# pico-develop

./: .gitignore  Makefile  README.md  docker-compose.yml
dev/dotfiles/: .bashrc
dev/rbpi/: enable-service.sh  monitor.service  monitor.sh  on_change.sh
dev/scripts/: install-tools.sh
server/: __main__.py  __start__.py
server/core/: config.py  logger.py  server.py
server/support/: __constants__.py
server/utils/: file.py
source/: CMakeLists.txt  setup
source/incs/: array.h  asserts.h  core.h  state.h  stringf.h
source/srcs/: main.c
source/srcs/core/: array.c  debug.c  stringf.c  time.c
source/srcs/routine/: loop.c  state.c
source/srcs/services/: tcp_client.c  wifi_client.c
